--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,10 +9,41 @@
 <body>
     
   <h1>Pepperoni Pizza</h1>
+
   <img src="./pizza.jpg" alt="Picture of Pizza">
-  <h4>This Homemade Pepperoni Pizza has everything you want—
-     great crust, gooey cheese, and tons of pepperoni.<br> The secret
-    to great pepperoni flavor? Hide extra under the cheese! Who needs delivery?</h4>
+
+  <!--https://www.simplyrecipes.com/recipes/homemade_pepperoni_pizza/-->
+
+  <h3>This Homemade Pepperoni Pizza has everything you want—great crust, gooey cheese, and tons of pepperoni. The secret
+    to great pepperoni flavor? Hide extra under the cheese! Who needs delivery?</h3>
+
+  <h4>Ingredients</h4>
+  <ul>
+    <li>16 ounces pizza dough</li>
+    <li>1/2 cup pizza sauce</li>
+    <li>18 to 20 slices pepperoni</li>
+    <li>12 ounces mozzarella cheese, grated</li>
+    <li>1/2 teaspoon ground black pepper</li>
+    <li>1 teaspoon fresh oregano</li>
+    <li>Flour for rolling and shaping dough</li>
+    <li>1/2 cup tomato sauce</li>
+    <li>1/2 teaspoon kosher salt</li>
+    <li>1/2 teaspoon ground black pepper</li>
+    <li>1/2 teaspoon granulated garlic</li>
+    <li>1/2 teaspoon granulated onion</li>
+    <li>1/4 teaspoon red pepper flakes</li>
+    <li>1 teaspoon olive oil</li>
+  </ul>
+
+  <h4>Steps</h4>
+  <ol>
+    <li>Preheat oven to 500°F. If you are using a pizza stone, preheat it in the oven for at least 20 minutes so it is nice and hot as well.</li>
+    <li>If you are using my sauce recipe, stir together the ingredients. The sauce recipe makes just enough for one large pizza. You can easily double it if you are making more than one pizza.</li>
+    <li>Roll out dough on a lightly floured surface. If it's hard to roll, let it rest for 5 minutes so it can come to room temperature. For a large pizza, I like to roll my dough into about a 14-inch diameter circle.</li>
+    <li>Transfer the dough to a lightly dusted pizza peel. Alternatively, fit it into a large cast-iron. Add sauce in a light layer all over the pizza, leaving about 1/4-inch crust around the edges. Chop half of the pepperoni and sprinkle it over the sauce. Top the pizza with grated cheese and the rest of the pepperoni. Season with black pepper.</li>
+    <li>If you're using a pizza stone, carefully slide pizza into the center of the preheated pizza stone. Cook for 6 minutes, then rotate the pizza halfway so it cooks evenly. Cook for another 6-8 minutes, or until the crust is golden brown and charred in spots.</li>
+    <li>Use pizza peel to slide pizza out onto a cutting board. Let the pizza rest for a minute and slice into pieces. Season with fresh oregano (optional). Serve while warm with a side salad.</li>
+  </ol>
 
 </body>
 </html>
