Add a pasta page with complete text

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -10,7 +10,7 @@
     
   <h1>Pepperoni Pizza</h1>
 
-  <img src="./pizza.jpg" alt="Picture of Pizza">
+  <img src="../images/pizza.jpg" alt="Picture of Pizza">
 
   <!--https://www.simplyrecipes.com/recipes/homemade_pepperoni_pizza/-->
 
