--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <body>
     <h1>Odin Recipes</h1>
 <nav>
-    <a href="./recipes/pizza.html">Pizza</a>
-
+    <ul>
+    <li><a href="./recipes/pizza.html">Pepperoni Pizza</a></li>
+    <li><a href="./recipes/pasta.html">Mac'n Cheese</a></li>
+    <li><a href="./recipes/lasagne.html">Lasagne</a></li>
+    </ul>
 </nav>
 
 
