Add logo, navigation and create stylesheet

--- a/index.html
+++ b/index.html
@@ -5,17 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+
+<div class="nav-bar">    
+<img class="logo" src="./images/logo.svg" alt="Logo">
+    
 <nav>
-    <ul>
+    <ul class="navigation">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Recipes</a></li>
+        <li><a href="#">Ingredients</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact Us</a></li>
+    </ul> 
+</nav>
+</div>
+
+<h1>Odin Recipes</h1>
+
+  <ul>
     <li><a href="./recipes/pizza.html">Pepperoni Pizza</a></li>
     <li><a href="./recipes/pasta.html">Mac'n Cheese</a></li>
     <li><a href="./recipes/lasagne.html">Lasagne</a></li>
-    </ul>
-</nav>
-
+  </ul>
 
 
 </body>
