--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
 
@@ -26,9 +26,9 @@
 <h1>Odin Recipes</h1>
 
   <ul>
-    <li><a href="./recipes/pizza.html">Pepperoni Pizza</a></li>
-    <li><a href="./recipes/pasta.html">Mac'n Cheese</a></li>
-    <li><a href="./recipes/lasagne.html">Lasagne</a></li>
+    <li><a href="./pages/pizza.html">Pepperoni Pizza</a></li>
+    <li><a href="./pages/pasta.html">Mac'n Cheese</a></li>
+    <li><a href="./pages/lasagne.html">Lasagne</a></li>
   </ul>
 
 
