--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     
 <nav>
     <ul class="navigation">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Recipes</a></li>
-        <li><a href="#">Ingredients</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="#" class="nav-link">Home</a></li>
+        <li><a href="#" class="nav-link">Recipes</a></li>
+        <li><a href="#" class="nav-link">Ingredients</a></li>
+        <li><a href="#" class="nav-link">About</a></li>
+        <li><a href="#" class="nav-link">Contact Us</a></li>
     </ul> 
 </nav>
 </div>
