Change Pizza image and add tag to the page

--- a/pages/pizza.html
+++ b/pages/pizza.html
@@ -5,13 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza Recipe</title>
+    <link rel="stylesheet" href="../css/pizza.css">
 </head>
 <body>
     
-  <h1>Pepperoni Pizza</h1>
+  <h1 style="text-align: center;">Pepperoni Pizza</h1> 
+  <p style="text-align: center;">Cooking Time: 30-40min</p>
+  <div class="tag-container">
+  <a class="tag-link" href="#">Pizza</a>
+  </div>
 
-  <img src="../images/pizza.jpg" alt="Picture of Pizza">
+  <img class="main-img" src="../images/pizza.jpeg" alt="Picture of Pizza">
 
+  
   <!--https://www.simplyrecipes.com/recipes/homemade_pepperoni_pizza/-->
 
   <h3>This Homemade Pepperoni Pizza has everything you want—great crust, gooey cheese, and tons of pepperoni. The secret
