Add fonts to Pizza page

--- a/pages/pizza.html
+++ b/pages/pizza.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza Recipe</title>
     <link rel="stylesheet" href="../css/pizza.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM+Serif+Display">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
 </head>
 <body>
     
-  <h1 style="text-align: center;">Pepperoni Pizza</h1> 
-  <p style="text-align: center;">Cooking Time: 30-40min</p>
-  <div class="tag-container">
-  <a class="tag-link" href="#">Pizza</a>
-  </div>
+<div class="intro-container">
+  <h1 class="main-heading">Pepperoni Pizza</h1> 
+  <p class="cooking-time"><em>Cooking Time: 30-40min</em></p>
+  <a class="pizza-tag" href="#"><strong>Pizza</strong></a>
+</div>
 
   <img class="main-img" src="../images/pizza.jpeg" alt="Picture of Pizza">
 
