Add font to navigation and flex box for navbar

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
 </head>
 <body>
 
 <div class="nav-bar">    
-<img class="logo" src="./images/logo.svg" alt="Logo">
+<a href="./index.html" class="logo-container"><img class="logo" src="./images/logo.svg" alt="Logo"></a>
     
 <nav>
     <ul class="navigation">
