Add box-shadow for nav and nav to pizza page

--- a/pages/pizza.html
+++ b/pages/pizza.html
@@ -11,7 +11,23 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
 </head>
 <body>
-    
+                              <!----------Nav Part---------->    
+  <div class="nav-bar">    
+    <a href="./index.html" class="logo-container"><img class="logo" src="../images/logo.svg" alt="Logo"></a>
+        
+    <nav>
+        <ul class="navigation">
+            <li><a href="../index.html" class="nav-link">Home</a></li>
+            <li><a href="#" class="nav-link">Recipes</a></li>
+            <li><a href="#" class="nav-link">Ingredients</a></li>
+            <li><a href="#" class="nav-link">About</a></li>
+            <li><a href="#" class="nav-link">Contact Us</a></li>
+        </ul> 
+    </nav>
+    </div>
+
+                              <!----------Pizza Part---------->
+
 <div class="intro-container">
   <h1 class="main-heading">Pepperoni Pizza</h1> 
   <p class="cooking-time"><em>Cooking Time: 30-40min</em></p>
