Change and resize Pizza image + Add animation to nav

--- a/pages/pizza.html
+++ b/pages/pizza.html
@@ -34,7 +34,7 @@
   <a class="pizza-tag" href="#"><strong>Pizza</strong></a>
 </div>
 
-  <img class="main-img" src="../images/pizza.jpeg" alt="Picture of Pizza">
+  <img class="main-img" src="../images/pizza-full.jpeg" alt="Picture of Pizza">
 
   
   <!--https://www.simplyrecipes.com/recipes/homemade_pepperoni_pizza/-->
