--- a/pages/pasta.html
+++ b/pages/pasta.html
@@ -4,11 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Recipe</title>
+    <title>Mac'n Cheese Recipe</title>
+    <link rel="stylesheet" href="../css/pasta.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
 </head>
 <body>
     
-  <h1>Pepperoni Pizza</h1>
+  <div class="navbar">
+
+    <ul class="navigation">
+      <li><a href="#" class="nav-link">Recipes</a></li>
+      <li><a href="#" class="nav-link">Ingredients</a></li>
+      <li><a href="#" class="nav-link">About</a></li>
+      <li><a href="#" class="nav-link">Contact Us</a></li>
+    </ul> 
+
+    <a href="../index.html"><img style="width:auto; height: 75px;"src="../images/logo2.png" alt="logo"></a>
+
+    <div class="social-links">
+    <a href="../index.html"><img style="width: 30px; height:auto;" class="social" src="../images/instagram.png" alt="instagram logo"></a>
+    <a href="../index.html"><img style="width: 30px; height:auto;"class="social" src="../images/facebook.png" alt="facebook logo"></a>
+    <a href="../index.html"><img style="width: 30px; height:auto;"class="social" src="../images/twitter.png" alt="facebook"></a>
+    </div>
+
+
+  </div>
+
+  <h1>Mac'n Cheese</h1>
 
   <img src="../images/mac-n-cheese.jpg" alt="Picture of Pasta">
 
