Fix Social media links on pasta page

--- a/pages/pasta.html
+++ b/pages/pasta.html
@@ -15,16 +15,15 @@
     <ul class="navigation">
       <li><a href="#" class="nav-link">Recipes</a></li>
       <li><a href="#" class="nav-link">Ingredients</a></li>
-      <li><a href="#" class="nav-link">About</a></li>
       <li><a href="#" class="nav-link">Contact Us</a></li>
     </ul> 
 
     <a href="../index.html"><img style="width:auto; height: 75px;"src="../images/logo2.png" alt="logo"></a>
 
     <div class="social-links">
-    <a href="../index.html"><img style="width: 30px; height:auto;" class="social" src="../images/instagram.png" alt="instagram logo"></a>
-    <a href="../index.html"><img style="width: 30px; height:auto;"class="social" src="../images/facebook.png" alt="facebook logo"></a>
-    <a href="../index.html"><img style="width: 30px; height:auto;"class="social" src="../images/twitter.png" alt="facebook"></a>
+    <a href="https://www.instagram.com/"><img style="width: 30px; height:auto;" class="social" src="../images/instagram.png" alt="instagram logo"></a>
+    <a href="https://en-gb.facebook.com/"><img style="width: 30px; height:auto;"class="social" src="../images/facebook.png" alt="facebook logo"></a>
+    <a href="https://twitter.com/?lang=en"><img style="width: 30px; height:auto;"class="social" src="../images/twitter.png" alt="facebook"></a>
     </div>
 
 
