--- a/pages/pizza.html
+++ b/pages/pizza.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Serif+Pro">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
                               <!----------Nav Part---------->    
@@ -74,5 +77,9 @@
       </ol>
     </div>
   </div>
+
+  <footer>
+    <p>Odin-Recipes 2022 © by AT47356</p>
+  </footer>
 </body>
 </html>
