Add navigation on Lasagne page and change picture along with basic formatting

--- a/pages/lasagne.html
+++ b/pages/lasagne.html
@@ -5,12 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagne Recipe</title>
+    <link rel="stylesheet" href="../css/lasagne.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Serif+Pro">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
 </head>
 <body>
-    
-  <h1>Lasagne</h1>
+                                  <!----------Nav Part---------->    
+    <div class="nav-bar">    
+      <a href="./index.html" class="logo-container"><img class="logo" src="../images/logo.svg" alt="Logo"></a>
+          
+      <nav>
+          <ul class="navigation">
+              <li><a href="../index.html" class="nav-link">Home</a></li>
+              <li><a href="#" class="nav-link">Recipes</a></li>
+              <li><a href="#" class="nav-link">Ingredients</a></li>
+              <li><a href="#" class="nav-link">About</a></li>
+              <li><a href="#" class="nav-link">Contact Us</a></li>
+          </ul> 
+      </nav>
+    </div>    
 
-  <img src="../images/lasagne.jpg" alt="Picture of Lasagne">
+                               <!----------Lasagne Part---------->
+
+    <div class="intro-container">
+      <h1 class="main-heading">Lasagne</h1> 
+      <p class="cooking-time"><em>Cooking Time: 50-60min</em></p>
+      <a class="pasta-tag" href="#"><strong>Pasta</strong></a>
+    </div>
+
+    <img class="main-img" src="../images/lasagne2.jpeg" alt="Picture of Lasagne">    
+
+
+
+
+
+
+
+  
+
 
   <!--https://www.deliciousmagazine.co.uk/recipes/classic-lasagne/-->
 
@@ -23,7 +56,7 @@
     <li>250g pack fresh lasagne sheets</li>
     <li>2 litre baking dish</li>
 
-    <h5>For the meat sause</h5>
+    <h5>For the meat sauce</h5>
     <li>1 large celery stick, finely chopped</li>
     <li>1 onion, finely chopped</li>
     <li>2 garlic cloves, finely chopped</li>
