Change method/steps apearence

--- a/pages/lasagne.html
+++ b/pages/lasagne.html
@@ -75,7 +75,7 @@
 
 
       <div class="steps">
-        <h4 style="text-align: center; text-decoration: underline">Steps</h4>
+        <h4 style="font-family: Josefin Sans; font-size: 2rem; padding-bottom: 0.5em; border-bottom: 2px solid rgb(226, 221, 204);">Method</h4>
         <ol>
           <li>Heat the oil in a large deep frying pan over a medium-high heat, then fry the prosciutto until crisp. Transfer to a plate using a slotted spoon.</li> <br>
           <li>For the <strong>meat sauce</strong>, add the celery and onion to the pan with a pinch of salt and pepper; cook until soft (about 10 minutes). Add the garlic and cook for another minute. Add the mince and fry for 4-5 minutes, breaking up with a wooden spoon, until browned. Stir in the tomato purée and chopped tomatoes; cook for another minute. Add the stock and simmer for 30 minutes over a low-medium heat until the sauce has thickened. Remove from the heat, season with salt and pepper, then stir in the fried prosciutto, chopped oregano and most of the basil leaves.</li> <br>
