--- a/pages/pizza.html
+++ b/pages/pizza.html
@@ -66,7 +66,7 @@
     </div>
 
     <div class="steps">
-      <h4 style="text-align: center; text-decoration: underline">Steps</h4>
+      <h4 style="font-family: Josefin Sans; font-size: 2rem; padding-bottom: 0.5em; border-bottom: 2px solid rgb(226, 221, 204);">Method</h4>
       <ol>
         <li>Preheat oven to 500°F. If you are using a pizza stone, preheat it in the oven for at least 20 minutes so it is nice and hot as well.</li> <br>
         <li>If you are using my sauce recipe, stir together the ingredients. The sauce recipe makes just enough for one large pizza. You can easily double it if you are making more than one pizza.</li> <br>
