--- a/pages/pasta.html
+++ b/pages/pasta.html
@@ -31,7 +31,7 @@
 
   <h1>Mac'n Cheese</h1>
 
-  <img src="../images/macncheese.png" alt="Picture of Pasta">
+  <img src="../images/mac-n-cheese.jpg" alt="Picture of Pasta">
 
   <!--https://www.simplyrecipes.com/recipes/creamy_baked_mac_and_cheese/-->
 
