Replace Navigation html with original navigation html on pasta page

--- a/pages/pasta.html
+++ b/pages/pasta.html
@@ -9,25 +9,26 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
 </head>
 <body>
-    
-  <div class="navbar">
+  
+  <!----Navigation---->  
 
-    <ul class="navigation">
-      <li><a href="#" class="nav-link">Recipes</a></li>
-      <li><a href="#" class="nav-link">Ingredients</a></li>
-      <li><a href="#" class="nav-link">Contact Us</a></li>
-    </ul> 
-
-    <a href="../index.html"><img style="width:auto; height: 75px;"src="../images/logo2.png" alt="logo"></a>
-
-    <div class="social-links">
-    <a href="https://www.instagram.com/"><img style="width: 30px; height:auto;" class="social" src="../images/instagram.png" alt="instagram logo"></a>
-    <a href="https://en-gb.facebook.com/"><img style="width: 30px; height:auto;"class="social" src="../images/facebook.png" alt="facebook logo"></a>
-    <a href="https://twitter.com/?lang=en"><img style="width: 30px; height:auto;"class="social" src="../images/twitter.png" alt="facebook"></a>
-    </div>
-
-
+  
+  <div class="nav-bar">    
+    <a href="./index.html" class="logo-container"><img class="logo" src="../images/logo.svg" alt="Logo"></a>
+        
+    <nav>
+        <ul class="navigation">
+            <li><a href="../index.html" class="nav-link">Home</a></li>
+            <li><a href="#" class="nav-link">Recipes</a></li>
+            <li><a href="#" class="nav-link">Ingredients</a></li>
+            <li><a href="#" class="nav-link">About</a></li>
+            <li><a href="#" class="nav-link">Contact Us</a></li>
+        </ul> 
+    </nav>
   </div>
+
+  
+  <!-----Recipe and method---->
 
   <h1>Mac'n Cheese</h1>
 
