Add css for sections until image and slight change to hover animation

--- a/pages/pasta.html
+++ b/pages/pasta.html
@@ -35,9 +35,13 @@
   
   <!-----Recipe and method---->
 
-  <h1>Mac'n Cheese</h1>
-
-  <img src="../images/mac-n-cheese.jpg" alt="Picture of Pasta">
+  <div class="intro-container">
+    <h1 class="main-heading">Mac'n Cheese</h1> 
+    <p class="cooking-time"><em>Cooking Time: 25-35min</em></p>
+    <a class="pasta-tag" href="#"><strong>Pasta</strong></a>
+  </div>
+  
+    <img class="main-img" src="../images/mac-n-cheese.jpg" alt="Picture of Mac'n Cheese">
 
   <!--https://www.simplyrecipes.com/recipes/creamy_baked_mac_and_cheese/-->
 
