Code css for ingredients section in M&C

--- a/pages/pasta.html
+++ b/pages/pasta.html
@@ -47,30 +47,37 @@
 
   <h3>This creamy baked mac and cheese is just what your carb-loving soul needs. Drown macaroni in a rich, creamy cheese sauce, crown with breadcrumb topping, and bake to perfection. Yes, please!</h3>
 
-  <h4>Ingredients</h4>
-  <ul>
-    <h5>For the toppings</h5>
-    <li>2 tablespoons melted unsalted butter</li>
-    <li>2/3 cup plain panko breadcrumbs</li>
-    <li>1/4 cup shredded Parmesan</li>
-    <li>1/4 teaspoon kosher salt</li>
-    <li>1/8 teaspoon smoked paprika</li>
-    <li>Pinch cayenne pepper</li>
-    <h5>For the macaroni</h5>
-    <li>10 ounces elbow macaroni pasta or cavatappi</li>
-    <li>1 tablespoon kosher salt</li>
-    <li>1 tablespoon unsalted butter</li>
-    <h5>For the sauce</h5>
-    <li>4 ounces cream cheese</li>
-    <li>1 (10-ounce) brick cheddar cheese, shredded</li>
-    <li>2 1/2 cups whole milk</li>
-    <li>1/2 teaspoon white pepper</li>
-    <li>1/2 teaspoon kosher salt</li>
-    <li>1/2 teaspoon mustard powder</li>
-    <li>1/4 teaspoon turmeric powder</li>
-    <h5>Garnish</h5>
-    <li>Minced parsley or chives</li>
-  </ul>
+  <div class="container">
+
+    <div class="ingredients">
+      <h4>Ingredients</h4>
+        <ul>
+          <h5>For the toppings</h5>
+            <li>2 tablespoons melted unsalted butter</li>
+            <li>2/3 cup plain panko breadcrumbs</li>
+            <li>1/4 cup shredded Parmesan</li>
+            <li>1/4 teaspoon kosher salt</li>
+            <li>1/8 teaspoon smoked paprika</li>
+            <li>Pinch cayenne pepper</li>
+          <h5>For the macaroni</h5>
+            <li>10 ounces elbow macaroni pasta or cavatappi</li>
+            <li>1 tablespoon kosher salt</li>
+            <li>1 tablespoon unsalted butter</li>
+          <h5>For the sauce</h5>
+            <li>4 ounces cream cheese</li>
+            <li>1 (10-ounce) brick cheddar cheese, shredded</li>
+            <li>2 1/2 cups whole milk</li>
+            <li>1/2 teaspoon white pepper</li>
+            <li>1/2 teaspoon kosher salt</li>
+            <li>1/2 teaspoon mustard powder</li>
+            <li>1/4 teaspoon turmeric powder</li>
+          <h5>Garnish</h5>
+            <li>Minced parsley or chives</li>
+        </ul>
+    </div>
+
+
+  </div>
 
   <h4>Steps</h4>
   <ol>
