--- a/pages/pasta.html
+++ b/pages/pasta.html
@@ -76,20 +76,23 @@
         </ul>
     </div>
 
+    <div class="steps">
+      <h4 style="font-family: Josefin Sans; font-size: 2rem; padding-bottom: 0.5em; border-bottom: 2px solid rgb(226, 221, 204);" >Method</h4>
+       <ol>
+        <li>Preheat the oven to 350°F. Butter an 8 x 8 pan and set aside.</li>
+        <li>In a small bowl, melt 2 tablespoons of butter. Add panko, Parmesan, salt, smoked paprika, and cayenne pepper. Set aside.</li>
+        <li>Bring a pot of water to a boil over medium high heat. Add the macaroni and salt. Cook until the pasta is firm-tender, or al dente. Usually, this takes about a minute or two less than the cook time recommended on the box.</li>
+        <li>Drain the pasta into a colander. Add 1 tablespoon butter to the same pot you boiled the pasta in. Add the drained pasta back to the pan and stir to coat. Remove from heat. You’ll get back to it later.</li>
+        <li>In a large, high sided skillet set over medium heat, add the cream cheese, 1 cup of milk, and all of the spices. Break apart and smash the cream cheese with a spatula as it begins to soften and melt. Once the cream cheese is in pieces the size of a nickel or smaller, whisk the mixture until it’s homogeneous and thickened, about 4 to 5 minutes.</li>
+        <li>Whisk the remaining 1 1/2 cups of milk into the sauce. Add the cheddar cheese one cup at a time, whisking continuously. Make sure each cup is incorporated before adding the next.</li>
+        <li>Once the sauce is thick like heavy whipping cream and homogeneous, add the pasta. Stir to coat. It will look soupy. That’s what you want. Transfer the mixture to the buttered 8x8 pan. Smooth the top.</li>
+        <li>Sprinkle the panko mixture over the top of the mac and cheese. Place in oven for 20 to 25 minutes until the top is golden brown and the cheese sauce is bubbling around the edges. Cool briefly before serving.</li>
+      </ol>
+    </div>
 
   </div>
 
-  <h4>Steps</h4>
-  <ol>
-    <li>Preheat the oven to 350°F. Butter an 8 x 8 pan and set aside.</li>
-    <li>In a small bowl, melt 2 tablespoons of butter. Add panko, Parmesan, salt, smoked paprika, and cayenne pepper. Set aside.</li>
-    <li>Bring a pot of water to a boil over medium high heat. Add the macaroni and salt. Cook until the pasta is firm-tender, or al dente. Usually, this takes about a minute or two less than the cook time recommended on the box.</li>
-    <li>Drain the pasta into a colander. Add 1 tablespoon butter to the same pot you boiled the pasta in. Add the drained pasta back to the pan and stir to coat. Remove from heat. You’ll get back to it later.</li>
-    <li>In a large, high sided skillet set over medium heat, add the cream cheese, 1 cup of milk, and all of the spices. Break apart and smash the cream cheese with a spatula as it begins to soften and melt. Once the cream cheese is in pieces the size of a nickel or smaller, whisk the mixture until it’s homogeneous and thickened, about 4 to 5 minutes.</li>
-    <li>Whisk the remaining 1 1/2 cups of milk into the sauce. Add the cheddar cheese one cup at a time, whisking continuously. Make sure each cup is incorporated before adding the next.</li>
-    <li>Once the sauce is thick like heavy whipping cream and homogeneous, add the pasta. Stir to coat. It will look soupy. That’s what you want. Transfer the mixture to the buttered 8x8 pan. Smooth the top.</li>
-    <li>Sprinkle the panko mixture over the top of the mac and cheese. Place in oven for 20 to 25 minutes until the top is golden brown and the cheese sauce is bubbling around the edges. Cool briefly before serving.</li>
-  </ol>
+  
 
 </body>
 </html>
