Add stats script in the index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
 </head>
 <body>
+  <script>
+    const msg = "building in progress"
+    alert(msg);
+  </script>
 
 <div class="nav-bar">    
 <a href="./index.html" class="logo-container"><img class="logo" src="./images/logo.svg" alt="Logo"></a>
