Add prompt to homepage

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <script>
-    const msg = "building in progress"
-    alert(msg);
+    let msg = prompt("Who's there?","" );
+    alert("Hello " + msg);
   </script>
 
 <div class="nav-bar">    
