--- a/pages/pizza.html
+++ b/pages/pizza.html
@@ -14,6 +14,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <script>
+    let msg = prompt("Who's there?","" );
+    alert("Hello " + msg);
+  </script>
+
+
                               <!----------Nav Part---------->    
   <div class="nav-bar">    
     <a href="./index.html" class="logo-container"><img class="logo" src="../images/logo.svg" alt="Logo"></a>
