Deactivate alert on pizza page

--- a/pages/pizza.html
+++ b/pages/pizza.html
@@ -15,8 +15,8 @@
 </head>
 <body>
   <script>
-    let msg = prompt("Who's there?","" );
-    alert("Hello " + msg);
+   // let msg = prompt("Who's there?","" );
+   // alert("Hello " + msg);
   </script>
 
 
